--- a/StarterApp/StarterApp.csproj
+++ b/StarterApp/StarterApp.csproj
@@ -51,9 +51,18 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -63,36 +72,81 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BasicFunctions.cs" />
-    <Compile Include="OldCard.cs" />
-    <Compile Include="CardDatabase.cs" />
-    <Compile Include="ChampionCard.cs" />
-    <Compile Include="FollowerCard.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="FollowerCard.cs">
+      <DependentUpon>CardDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Old Scripts\BasicFunctions.cs" />
+    <Compile Include="CardDatabaseModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CardDatabaseModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CardDatabaseModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CardDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CardDatabaseModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CardDatabaseModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="ChampionCard.cs">
+      <DependentUpon>CardDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FullCard.cs">
+      <DependentUpon>CardDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Old Scripts\OldCard.cs" />
+    <Compile Include="Old Scripts\CardDatabase.cs" />
+    <Compile Include="Old Scripts\FollowerCard.cs" />
+    <Compile Include="Old Scripts\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpellCard.cs" />
-    <Compile Include="TemplarAI.cs" />
+    <Compile Include="SpellCard.cs">
+      <DependentUpon>CardDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Old Scripts\TemplarAI.cs" />
     <Compile Include="UserInterface.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UserInterface.Designer.cs">
       <DependentUpon>UserInterface.cs</DependentUpon>
     </Compile>
-    <Compile Include="VersionInfo.cs" />
+    <Compile Include="Old Scripts\VersionInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="CardDatabaseModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>CardDatabaseModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="CardDatabaseModel.edmx.diagram">
+      <DependentUpon>CardDatabaseModel.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="CardDatabase.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="CardDatabaseModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>CardDatabaseModel.Context.cs</LastGenOutput>
+      <DependentUpon>CardDatabaseModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="CardDatabaseModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>CardDatabaseModel.edmx</DependentUpon>
+      <LastGenOutput>CardDatabaseModel.cs</LastGenOutput>
     </Content>
     <Content Include="CardDatabase_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>CardDatabase.mdf</DependentUpon>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
       <Visible>False</Visible>
